- X11video: fix no SDL_VIDEORESIZE event being generated when the
  window manager sets the window size (bug 1859.)
- X11video: fix X11_SetGammaRamp not checking the return value of
  XStoreColors (bugs 1979, 3770.)
- X11video: fix SDL_VIDEORESIZE events not received when resizing
  window from the corner (inverted logic in X11 ConfigureNotify, i.e.
  resize handling - bug 1430.)
- X11video: unblock SDL_WM_GrabInput() GrabNotViewable case (bug 1155.)
- Mac OS X: fix macOS 10.14 (Mojave) opengl issues (bug 4788.)
- Mac OS X: fix crash on any input in Quartz code (bug 2560.)
- Mac OS X: fix crash in Quartz gamma ramp code.
- Mac OS X: fix build for 10.9 Mavericks or newer (bug 2085.)
- Mac OS X, Quartz: fix cursor transparency (bug 4076.)
- Mac OS X, joystick: update to support Saitek p2500 gamepad (bug 2025)
- Mac OS X: fixed audio on macOS 11.0 beta ("Big Sur")
- Mac OS X, main: updates for -psn_XXX command line arg for Finder
  launches in new macOS versions.
- Windows, video: fix other window positions/sizes when exiting
  fullscreen (bug 3315.)
- Windows, keyboard: reset deadkeys upon SDL_EnableUNICODE() or upon
  quit (bug 3332.)
- Windows: Visual Studio project file updates.
- OS/2: fixes and Watcom makefile updates.
- Linux, joystick: fix invalid coef when axis min > axis max.
- Linux, joystick: enhance detection of gamepads.
- Linux, joystick: allow for custom joystick names.
- FreeBSD, joystick: compile fixes.
- BSD, joystick: increase the number of uhid devices to scan (bug 1561)
- Linux, ALSA: fix excessive I/O causing high CPU usage (bug 4941.)
- Linux, evdev: ignore joystick axis events if they aren't in a sane
  range.
- Linux, joystick: fix Dualshock 3's motion sensors overwrite analog
  stick: protect against any axis that isn't reported by EVIOCGBIT but
  still sending EV_ABS events (bug 3193.)
- FreeBSD, cdrom: fix CDROM detection misbehaviour for 7.x and newer
  (bug 1529.)
- Solaris, audio: fix pulseaudio dynamic linking.